--- a/pricing.html
+++ b/pricing.html
@@ -60,112 +60,118 @@
             </div>
 
             <!-- Pricing Grid -->
-            <div class="max-w-5xl mx-auto mt-24 grid md:grid-cols-2 gap-8 items-start">
+            <div class="max-w-4xl mx-auto mt-20 grid md:grid-cols-2 gap-8 items-stretch">
                 <!-- Free Plan -->
                 <div
-                    class="bg-white p-8 rounded-2xl border border-[#e1e3e5] flex flex-col h-full hover:shadow-md transition-all">
+                    class="bg-[#f9fafb] p-8 rounded-[2rem] border border-[#e1e3e5] flex flex-col h-full hover:shadow-xl transition-all group">
                     <div class="mb-8">
-                        <h3 class="text-3xl font-black text-[#1a1c1d] mb-2">Free</h3>
-                        <p class="text-sm text-[#5c5f62] mb-6">Perfect for getting started</p>
+                        <h3 class="text-xs font-black uppercase tracking-[0.2em] text-[#919eab] mb-4">Free</h3>
                         <div class="flex items-baseline gap-1">
                             <span class="text-4xl font-black text-[#1a1c1d]">$0</span>
-                            <span class="text-[#5c5f62] font-bold text-sm">/month</span>
+                            <span class="text-[#5c5f62] font-bold text-xs">/mo</span>
                         </div>
+                        <p class="mt-3 text-[#5c5f62] font-medium text-xs">Perfect for getting started with Instagram
+                            feeds.</p>
                     </div>
+
+                    <ul class="space-y-4 mb-10 flex-grow">
+                        <li class="flex items-center gap-3 text-xs font-bold text-[#1a1c1d]">
+                            <span class="material-symbols-outlined text-[#27c93f] text-xl">check_circle</span>
+                            Basic Analytics
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold text-[#1a1c1d]">
+                            <span class="material-symbols-outlined text-[#27c93f] text-xl">check_circle</span>
+                            Daily Auto-Sync
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold text-[#1a1c1d]">
+                            <span class="material-symbols-outlined text-[#27c93f] text-xl">check_circle</span>
+                            Slider Layout Only
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold text-[#1a1c1d]">
+                            <span class="material-symbols-outlined text-[#27c93f] text-xl">check_circle</span>
+                            Max 12 Photos & Videos
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold text-[#1a1c1d]">
+                            <span class="material-symbols-outlined text-[#27c93f] text-xl">check_circle</span>
+                            Mobile Responsive
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold text-[#1a1c1d]">
+                            <span class="material-symbols-outlined text-[#27c93f] text-xl">check_circle</span>
+                            Basic Support
+                        </li>
+                    </ul>
 
                     <button
-                        class="w-full py-3.5 bg-[#f4f6f8] text-[#919eab] font-bold text-sm rounded-xl mb-10 cursor-default">
-                        Current Plan
+                        class="w-full py-4 bg-white border-2 border-[#e1e3e5] text-[#1a1c1d] font-black text-sm rounded-xl hover:bg-[#1a1c1d] hover:text-white hover:border-[#1a1c1d] transition-all shadow-sm">
+                        Start for Free
                     </button>
-
-                    <div class="space-y-6">
-                        <p class="text-sm font-black text-[#1a1c1d]">Includes:</p>
-                        <ul class="space-y-4">
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Basic Analytics
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Daily Auto-Sync
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Slider Layout Only
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Max 12 Photos & Videos
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Mobile Responsive
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Basic Support
-                            </li>
-                        </ul>
-                    </div>
                 </div>
 
                 <!-- Premium Plan -->
-                <div class="bg-white p-8 rounded-2xl border border-[#e1e3e5] flex flex-col h-full shadow-lg relative">
-                    <div class="absolute top-6 right-6">
-                        <span
-                            class="bg-[#dbf8ec] text-[#2c845d] text-[10px] font-black px-3 py-1 rounded-full uppercase tracking-wider">Recommended</span>
-                    </div>
-                    <div class="mb-8">
-                        <h3 class="text-3xl font-black text-[#1a1c1d] mb-2">Premium</h3>
-                        <p class="text-sm text-[#5c5f62] mb-6">For growing brands</p>
-                        <div class="flex items-baseline gap-2">
-                            <span class="text-4xl font-black text-[#1a1c1d]">$2.99</span>
-                            <span class="text-[#919eab] font-bold text-sm line-through">$5.00</span>
-                            <span class="text-[#5c5f62] font-bold text-sm">/month</span>
-                        </div>
+                <div
+                    class="bg-[#1a1c1d] p-8 rounded-[2rem] border-4 border-primary relative flex flex-col h-full shadow-[0_30px_60px_-15px_rgba(255,90,61,0.15)] z-10 text-white overflow-hidden group">
+                    <div
+                        class="absolute -top-px -right-px bg-primary text-white text-[9px] font-black px-4 py-2 rounded-bl-2xl uppercase tracking-widest shadow-lg">
+                        Recommended
                     </div>
 
+                    <div class="mb-8">
+                        <h3 class="text-xs font-black uppercase tracking-[0.2em] text-primary/90 mb-4">Premium</h3>
+                        <div class="flex items-baseline gap-2 text-white">
+                            <span class="text-5xl font-black">$2.99</span>
+                            <div class="flex flex-col">
+                                <span
+                                    class="text-[#919eab] font-bold text-xs line-through decoration-primary decoration-1">$5.00</span>
+                                <span class="text-[#919eab] font-bold text-[10px]">/mo</span>
+                            </div>
+                        </div>
+                        <p class="mt-3 text-[#919eab] font-medium text-xs">For growing brands looking to maximize social
+                            conversion.</p>
+                    </div>
+
+                    <ul class="space-y-4 mb-10 flex-grow">
+                        <li class="flex items-center gap-3 text-xs font-bold">
+                            <span class="material-symbols-outlined text-primary text-xl">check_circle</span>
+                            Advanced Analytics
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold">
+                            <span class="material-symbols-outlined text-primary text-xl">check_circle</span>
+                            Unlimited Photos & Videos
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold">
+                            <span class="material-symbols-outlined text-primary text-xl">check_circle</span>
+                            Slider & Grid Layouts
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold">
+                            <span class="material-symbols-outlined text-primary text-xl">check_circle</span>
+                            Pin & Hide Posts/Reels
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold">
+                            <span class="material-symbols-outlined text-primary text-xl">check_circle</span>
+                            Shoppable Posts (Tag Products)
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold">
+                            <span class="material-symbols-outlined text-primary text-xl">check_circle</span>
+                            Show Pinned Reels Filter
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold">
+                            <span class="material-symbols-outlined text-primary text-xl">check_circle</span>
+                            Real-time Sync
+                        </li>
+                        <li class="flex items-center gap-3 text-xs font-bold">
+                            <span class="material-symbols-outlined text-primary text-xl">check_circle</span>
+                            Priority Support
+                        </li>
+                    </ul>
+
                     <button
-                        class="w-full py-4 bg-[#1a1c1d] text-white font-black text-sm rounded-xl mb-10 hover:bg-black transition-all shadow-lg active:scale-[0.98]">
+                        class="w-full py-5 bg-primary text-white font-black text-base rounded-xl hover:scale-[1.02] transition-all shadow-2xl shadow-primary/30 active:scale-[0.98]">
                         Upgrade to Premium
                     </button>
 
-                    <div class="space-y-6">
-                        <p class="text-sm font-black text-[#1a1c1d]">Everything in Free, plus:</p>
-                        <ul class="space-y-4">
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Advanced Analytics (Week-over-week insights)
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Unlimited Photos & Videos
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Slider & Grid Layouts
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Pin & Hide Posts/Reels
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Shoppable Posts (Tag Products)
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Show Pinned Reels Only Filter
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Real-time Sync
-                            </li>
-                            <li class="flex items-center gap-3 text-sm font-medium text-[#5c5f62]">
-                                <span class="size-1 rounded-full bg-[#1a1c1d]"></span>
-                                Priority Support
-                            </li>
-                        </ul>
+                    <!-- Decorative Background element -->
+                    <div
+                        class="absolute -bottom-16 -right-16 size-48 bg-primary/10 blur-[60px] rounded-full pointer-events-none">
                     </div>
                 </div>
             </div>
@@ -193,14 +199,19 @@
                         </thead>
                         <tbody class="divide-y divide-[#e1e3e5]">
                             <tr>
-                                <td class="p-6 text-sm font-bold">Custom Layouts</td>
+                                <td class="p-6 text-sm font-bold">Photos & Videos Limit</td>
+                                <td class="p-6 text-center text-xs font-bold text-[#919eab]">Max 12</td>
+                                <td class="p-6 text-center text-xs font-bold text-[#1a1c1d]">Unlimited</td>
+                            </tr>
+                            <tr>
+                                <td class="p-6 text-sm font-bold">Slider Layout</td>
                                 <td class="p-6 text-center"><span
                                         class="material-symbols-outlined text-[#27c93f]">check</span></td>
                                 <td class="p-6 text-center"><span
                                         class="material-symbols-outlined text-[#27c93f]">check</span></td>
                             </tr>
                             <tr>
-                                <td class="p-6 text-sm font-bold">Ad-free Feed</td>
+                                <td class="p-6 text-sm font-bold">Grid Layout</td>
                                 <td class="p-6 text-center"><span
                                         class="material-symbols-outlined text-[#ff5a3d] opacity-20 font-light">close</span>
                                 </td>
@@ -208,17 +219,38 @@
                                         class="material-symbols-outlined text-[#27c93f]">check</span></td>
                             </tr>
                             <tr>
-                                <td class="p-6 text-sm font-bold">Product Tagging</td>
+                                <td class="p-6 text-sm font-bold">Shoppable Posts</td>
                                 <td class="p-6 text-center"><span
                                         class="material-symbols-outlined text-[#ff5a3d] opacity-20 font-light">close</span>
                                 </td>
                                 <td class="p-6 text-center"><span
                                         class="material-symbols-outlined text-[#27c93f]">check</span></td>
+                            </tr>
+                            <tr>
+                                <td class="p-6 text-sm font-bold">Pin & Hide Posts</td>
+                                <td class="p-6 text-center"><span
+                                        class="material-symbols-outlined text-[#ff5a3d] opacity-20 font-light">close</span>
+                                </td>
+                                <td class="p-6 text-center"><span
+                                        class="material-symbols-outlined text-[#27c93f]">check</span></td>
+                            </tr>
+                            <tr>
+                                <td class="p-6 text-sm font-bold">Auto-Sync Frequency</td>
+                                <td class="p-6 text-center text-xs font-bold text-[#919eab]">Daily</td>
+                                <td class="p-6 text-center text-xs font-bold text-[#1a1c1d]">Real-time</td>
                             </tr>
                             <tr>
                                 <td class="p-6 text-sm font-bold">Analytics Dashboard</td>
                                 <td class="p-6 text-center text-xs font-bold text-[#919eab]">Basic</td>
-                                <td class="p-6 text-center text-xs font-bold text-[#1a1c1d]">Full</td>
+                                <td class="p-6 text-center text-xs font-bold text-[#1a1c1d]">Advanced</td>
+                            </tr>
+                            <tr>
+                                <td class="p-6 text-sm font-bold">Priority Support</td>
+                                <td class="p-6 text-center"><span
+                                        class="material-symbols-outlined text-[#ff5a3d] opacity-20 font-light">close</span>
+                                </td>
+                                <td class="p-6 text-center"><span
+                                        class="material-symbols-outlined text-[#27c93f]">check</span></td>
                             </tr>
                         </tbody>
                     </table>
