--- a/docs.html
+++ b/docs.html
@@ -110,12 +110,9 @@
                     </p>
                 </div>
 
-                <!-- Placeholder for Hero Image -->
-                <div
-                    class="aspect-video bg-[#f9fafb] border-2 border-dashed border-[#e1e3e5] rounded-3xl flex flex-col items-center justify-center overflow-hidden">
-                    <span class="material-symbols-outlined text-4xl text-[#919eab] mb-2">image</span>
-                    <p class="text-xs font-bold text-[#919eab] uppercase tracking-widest">Dashboard Overview Image Here
-                    </p>
+                <!-- Dashboard Overview Image -->
+                <div class="rounded-3xl overflow-hidden border border-[#e1e3e5] shadow-2xl">
+                    <img src="assets/dashboard.png" alt="Wallify IG Dashboard" class="w-full h-auto">
                 </div>
 
                 <div class="space-y-6 text-[#5c5f62] leading-relaxed">
@@ -244,11 +241,9 @@
                     <p class="text-lg text-[#5c5f62]">Track engagement and sales directly from your Instagram feeds.</p>
                 </div>
 
-                <!-- Placeholder for Analytics Image -->
-                <div
-                    class="aspect-video bg-[#f9fafb] border-2 border-dashed border-[#e1e3e5] rounded-3xl flex flex-col items-center justify-center">
-                    <span class="material-symbols-outlined text-4xl text-[#919eab] mb-2">image</span>
-                    <p class="text-xs font-bold text-[#919eab] uppercase">Analytics Dashboard Image Here</p>
+                <!-- Analytics Dashboard Image -->
+                <div class="rounded-3xl overflow-hidden border border-[#e1e3e5] shadow-2xl">
+                    <img src="assets/analytics.png" alt="Wallify IG Analytics" class="w-full h-auto">
                 </div>
 
                 <div class="space-y-6 text-[#5c5f62]">
