--- a/docs.html
+++ b/docs.html
@@ -87,7 +87,7 @@
                 <div class="p-6 bg-[#f9fafb] rounded-2xl border border-[#e1e3e5]">
                     <p class="text-xs font-bold mb-2">Need help?</p>
                     <p class="text-[10px] text-[#5c5f62] leading-relaxed mb-4">Can't find what you're looking for?</p>
-                    <a href="support.html" class="text-xs font-black text-primary flex items-center gap-1">Ask Support
+                    <a href="support" class="text-xs font-black text-primary flex items-center gap-1">Ask Support
                         <span class="material-symbols-outlined text-xs">arrow_forward</span></a>
                 </div>
             </nav>
