--- a/support.html
+++ b/support.html
@@ -76,7 +76,7 @@
                     <h3 class="text-xl font-bold">Getting Started</h3>
                     <p class="text-[#5c5f62] text-sm leading-relaxed">Everything you need to know to get your Instagram
                         feed live in minutes.</p>
-                    <a href="docs.html"
+                    <a href="docs"
                         class="text-primary font-bold text-sm flex items-center gap-1 hover:gap-2 transition-all">
                         View Guides <span class="material-symbols-outlined text-sm">arrow_forward</span>
                     </a>
@@ -86,7 +86,7 @@
                     <h3 class="text-xl font-bold">Customization</h3>
                     <p class="text-[#5c5f62] text-sm leading-relaxed">Learn how to match Wallify IG to your store's
                         unique brand and design.</p>
-                    <a href="docs.html"
+                    <a href="docs"
                         class="text-primary font-bold text-sm flex items-center gap-1 hover:gap-2 transition-all">
                         View Guides <span class="material-symbols-outlined text-sm">arrow_forward</span>
                     </a>
@@ -96,7 +96,7 @@
                     <h3 class="text-xl font-bold">Troubleshooting</h3>
                     <p class="text-[#5c5f62] text-sm leading-relaxed">Fixing connection issues or display problems with
                         your Instagram feed.</p>
-                    <a href="docs.html"
+                    <a href="docs"
                         class="text-primary font-bold text-sm flex items-center gap-1 hover:gap-2 transition-all">
                         View Guides <span class="material-symbols-outlined text-sm">arrow_forward</span>
                     </a>
@@ -120,7 +120,7 @@
                             </div>
                             <div>
                                 <p class="text-[10px] font-black uppercase tracking-widest text-[#919eab]">Email Us</p>
-                                <p class="text-lg font-bold">support@wallifyig.com</p>
+                                <p class="text-lg font-bold">info@34devs.com</p>
                             </div>
                         </div>
                         <div class="flex items-center gap-5">
@@ -159,9 +159,7 @@
                             <textarea class="w-full p-4 bg-[#f9fafb] border border-[#e1e3e5] rounded-xl text-[#1a1c1d]"
                                 rows="4"></textarea>
                         </div>
-                        <button
-                            class="w-full py-7 bg-primary text-white font-black rounded-2xl shadow-xl shadow-primary/20 hover:scale-[1.02] transition-all">Send
-                            Message</button>
+                        <a href="mailto:info@34devs.com" class="block text-center w-full py-7 bg-primary text-white font-black rounded-2xl shadow-xl shadow-primary/20 hover:scale-[1.02] transition-all">Send Email</a>
                     </form>
                 </div>
             </div>
