--- a/impressum.html
+++ b/impressum.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 
-<html class="light" lang="en"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Impressum | Wallify IG</title>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<script id="tailwind-config">
+<html class="light" lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Impressum | Wallify IG</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap"
+        rel="stylesheet" />
+    <script id="tailwind-config">
         tailwind.config = {
             darkMode: "class",
             theme: {
@@ -31,139 +38,172 @@
             },
         }
     </script>
-<style>
+    <style>
         body {
             font-family: 'Inter', sans-serif;
             -webkit-font-smoothing: antialiased;
         }
+
         @media print {
-            .no-print { display: none; }
-            .print-padding { padding: 0 !important; }
+            .no-print {
+                display: none;
+            }
+
+            .print-padding {
+                padding: 0 !important;
+            }
         }
     </style>
 </head>
-<body class="bg-background-light dark:bg-background-dark text-[#181210] dark:text-[#f5f0f0] min-h-screen selection:bg-primary/20 selection:text-primary">
-<div class="layout-container flex h-full grow flex-col">
-<div id="site-header"></div>
-<!-- Main Content Area -->
-<main class="flex-1 flex flex-col items-center py-12 md:py-20 px-6">
-<div class="max-w-[700px] w-full">
-<!-- Breadcrumbs & Header -->
-<nav class="flex items-center gap-2 mb-8 no-print">
-<a class="text-primary text-sm font-medium flex items-center gap-1 hover:underline" href="index.html">
-<span class="material-symbols-outlined text-xs">arrow_back</span>
+
+<body
+    class="bg-background-light dark:bg-background-dark text-[#181210] dark:text-[#f5f0f0] min-h-screen selection:bg-primary/20 selection:text-primary">
+    <div class="layout-container flex h-full grow flex-col">
+        <div id="site-header"></div>
+        <!-- Main Content Area -->
+        <main class="flex-1 flex flex-col items-center py-12 md:py-20 px-6">
+            <div class="max-w-[700px] w-full">
+                <!-- Breadcrumbs & Header -->
+                <nav class="flex items-center gap-2 mb-8 no-print">
+                    <a class="text-primary text-sm font-medium flex items-center gap-1 hover:underline" href="index">
+                        <span class="material-symbols-outlined text-xs">arrow_back</span>
                         Back to Home
                     </a>
-<span class="text-gray-400 text-sm">/</span>
-<span class="text-gray-500 text-sm">Impressum</span>
-</nav>
-<div class="mb-12">
-<h1 class="text-5xl md:text-6xl font-black tracking-tighter mb-4 text-[#181210] dark:text-white">
+                    <span class="text-gray-400 text-sm">/</span>
+                    <span class="text-gray-500 text-sm">Impressum</span>
+                </nav>
+                <div class="mb-12">
+                    <h1 class="text-5xl md:text-6xl font-black tracking-tighter mb-4 text-[#181210] dark:text-white">
                         Impressum<span class="text-primary">.</span>
-</h1>
-<p class="text-lg text-gray-500 dark:text-gray-400 font-normal border-l-2 border-primary pl-4 py-1">
+                    </h1>
+                    <p class="text-lg text-gray-500 dark:text-gray-400 font-normal border-l-2 border-primary pl-4 py-1">
                         Legal Disclosure and Official Company Information in accordance with § 5 TMG.
                     </p>
-</div>
-<!-- Engineered Grid List -->
-<section class="space-y-0 border-t border-primary/10">
-<!-- Item -->
-<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
-<div class="md:w-1/3 mb-1 md:mb-0">
-<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Company Name</span>
-</div>
-<div class="md:w-2/3">
-<p class="text-lg font-semibold text-[#181210] dark:text-white">Wallify IG Media Solutions GmbH</p>
-</div>
-</div>
-<!-- Item -->
-<div class="group flex flex-col md:flex-row md:items-start py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
-<div class="md:w-1/3 mb-1 md:mb-0 pt-1">
-<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Address</span>
-</div>
-<div class="md:w-2/3">
-<p class="text-base leading-relaxed text-[#181210] dark:text-white">
-                                Tech Avenue 42, Floor 8<br/>
-                                Silicon District<br/>
+                </div>
+                <!-- Engineered Grid List -->
+                <section class="space-y-0 border-t border-primary/10">
+                    <!-- Item -->
+                    <div
+                        class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+                        <div class="md:w-1/3 mb-1 md:mb-0">
+                            <span class="text-xs font-bold uppercase tracking-widest text-primary/60">Company
+                                Name</span>
+                        </div>
+                        <div class="md:w-2/3">
+                            <p class="text-lg font-semibold text-[#181210] dark:text-white">Wallify IG Media Solutions
+                                GmbH</p>
+                        </div>
+                    </div>
+                    <!-- Item -->
+                    <div
+                        class="group flex flex-col md:flex-row md:items-start py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+                        <div class="md:w-1/3 mb-1 md:mb-0 pt-1">
+                            <span class="text-xs font-bold uppercase tracking-widest text-primary/60">Address</span>
+                        </div>
+                        <div class="md:w-2/3">
+                            <p class="text-base leading-relaxed text-[#181210] dark:text-white">
+                                Tech Avenue 42, Floor 8<br />
+                                Silicon District<br />
                                 10117 Berlin, Germany
                             </p>
-<a class="inline-flex items-center gap-1 mt-2 text-xs font-medium text-primary hover:underline no-print" href="#">
-<span class="material-symbols-outlined text-sm">location_on</span> View on Map
+                            <a class="inline-flex items-center gap-1 mt-2 text-xs font-medium text-primary hover:underline no-print"
+                                href="#">
+                                <span class="material-symbols-outlined text-sm">location_on</span> View on Map
                             </a>
-</div>
-</div>
-<!-- Item -->
-<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
-<div class="md:w-1/3 mb-1 md:mb-0">
-<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Contact</span>
-</div>
-<div class="md:w-2/3 space-y-1">
-<div class="flex items-center gap-2">
-<span class="material-symbols-outlined text-primary text-sm">mail</span>
-<a class="text-base font-medium hover:text-primary transition-colors underline decoration-primary/20 underline-offset-4" href="mailto:legal@wallifyig.com">legal@wallifyig.com</a>
-</div>
-<div class="flex items-center gap-2">
-<span class="material-symbols-outlined text-primary text-sm">call</span>
-<a class="text-base font-medium hover:text-primary transition-colors" href="tel:+493012345678">+49 30 12345678</a>
-</div>
-</div>
-</div>
-<!-- Item -->
-<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
-<div class="md:w-1/3 mb-1 md:mb-0">
-<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Legal Registry</span>
-</div>
-<div class="md:w-2/3">
-<p class="text-base text-[#181210] dark:text-white">Amtsgericht Charlottenburg (Berlin), HRB 123456 B</p>
-</div>
-</div>
-<!-- Item -->
-<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
-<div class="md:w-1/3 mb-1 md:mb-0">
-<span class="text-xs font-bold uppercase tracking-widest text-primary/60">VAT Identification</span>
-</div>
-<div class="md:w-2/3">
-<p class="text-base font-mono text-[#181210] dark:text-white">DE 123 456 789</p>
-</div>
-</div>
-<!-- Item -->
-<div class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
-<div class="md:w-1/3 mb-1 md:mb-0">
-<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Managing Director</span>
-</div>
-<div class="md:w-2/3">
-<p class="text-base font-semibold text-[#181210] dark:text-white">Jane Doe</p>
-<p class="text-xs text-gray-400">Authorized representative</p>
-</div>
-</div>
-<!-- Item -->
-<div class="group flex flex-col md:flex-row md:items-start py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
-<div class="md:w-1/3 mb-1 md:mb-0 pt-1">
-<span class="text-xs font-bold uppercase tracking-widest text-primary/60">Content Responsible</span>
-</div>
-<div class="md:w-2/3">
-<p class="text-base text-[#181210] dark:text-white">Marcus Vane</p>
-<p class="text-xs text-gray-400 mt-1">Responsible for content according to § 18 MStV</p>
-</div>
-</div>
-</section>
-<!-- Footer Disclaimer -->
-<footer class="mt-16 pt-8 border-t border-primary/5 text-center">
-<p class="text-xs text-gray-400 dark:text-gray-500 uppercase tracking-widest mb-6">Online Dispute Resolution</p>
-<p class="text-sm text-gray-500 dark:text-gray-400 leading-relaxed mb-8">
-                        The European Commission provides a platform for online dispute resolution (OS), which you can find here: 
-                        <a class="text-primary hover:underline" href="https://ec.europa.eu/consumers/odr" target="_blank">https://ec.europa.eu/consumers/odr</a>. 
-                        We are not obligated and unwilling to participate in a dispute resolution procedure before a consumer arbitration board.
+                        </div>
+                    </div>
+                    <!-- Item -->
+                    <div
+                        class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+                        <div class="md:w-1/3 mb-1 md:mb-0">
+                            <span class="text-xs font-bold uppercase tracking-widest text-primary/60">Contact</span>
+                        </div>
+                        <div class="md:w-2/3 space-y-1">
+                            <div class="flex items-center gap-2">
+                                <span class="material-symbols-outlined text-primary text-sm">mail</span>
+                                <a class="text-base font-medium hover:text-primary transition-colors underline decoration-primary/20 underline-offset-4"
+                                    href="mailto:legal@wallifyig.com">legal@wallifyig.com</a>
+                            </div>
+                            <div class="flex items-center gap-2">
+                                <span class="material-symbols-outlined text-primary text-sm">call</span>
+                                <a class="text-base font-medium hover:text-primary transition-colors"
+                                    href="tel:+493012345678">+49 30 12345678</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Item -->
+                    <div
+                        class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+                        <div class="md:w-1/3 mb-1 md:mb-0">
+                            <span class="text-xs font-bold uppercase tracking-widest text-primary/60">Legal
+                                Registry</span>
+                        </div>
+                        <div class="md:w-2/3">
+                            <p class="text-base text-[#181210] dark:text-white">Amtsgericht Charlottenburg (Berlin), HRB
+                                123456 B</p>
+                        </div>
+                    </div>
+                    <!-- Item -->
+                    <div
+                        class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+                        <div class="md:w-1/3 mb-1 md:mb-0">
+                            <span class="text-xs font-bold uppercase tracking-widest text-primary/60">VAT
+                                Identification</span>
+                        </div>
+                        <div class="md:w-2/3">
+                            <p class="text-base font-mono text-[#181210] dark:text-white">DE450498414</p>
+                        </div>
+                    </div>
+                    <!-- Item -->
+                    <div
+                        class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+                        <div class="md:w-1/3 mb-1 md:mb-0">
+                            <span class="text-xs font-bold uppercase tracking-widest text-primary/60">Managing
+                                Director</span>
+                        </div>
+                        <div class="md:w-2/3">
+                            <p class="text-base font-semibold text-[#181210] dark:text-white">Jane Doe</p>
+                            <p class="text-xs text-gray-400">Authorized representative</p>
+                        </div>
+                    </div>
+                    <!-- Item -->
+                    <div
+                        class="group flex flex-col md:flex-row md:items-start py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
+                        <div class="md:w-1/3 mb-1 md:mb-0 pt-1">
+                            <span class="text-xs font-bold uppercase tracking-widest text-primary/60">Content
+                                Responsible</span>
+                        </div>
+                        <div class="md:w-2/3">
+                            <p class="text-base text-[#181210] dark:text-white">Marcus Vane</p>
+                            <p class="text-xs text-gray-400 mt-1">Responsible for content according to § 18 MStV</p>
+                        </div>
+                    </div>
+                </section>
+                <!-- Footer Disclaimer -->
+                <footer class="mt-16 pt-8 border-t border-primary/5 text-center">
+                    <p class="text-xs text-gray-400 dark:text-gray-500 uppercase tracking-widest mb-6">Online Dispute
+                        Resolution</p>
+                    <p class="text-sm text-gray-500 dark:text-gray-400 leading-relaxed mb-8">
+                        The European Commission provides a platform for online dispute resolution (OS), which you can
+                        find here:
+                        <a class="text-primary hover:underline" href="https://ec.europa.eu/consumers/odr"
+                            target="_blank">https://ec.europa.eu/consumers/odr</a>.
+                        We are not obligated and unwilling to participate in a dispute resolution procedure before a
+                        consumer arbitration board.
                     </p>
-<div class="flex justify-center gap-4 no-print">
-<button class="flex items-center gap-2 px-4 py-2 rounded-lg bg-white dark:bg-white/5 border border-primary/10 text-xs font-bold uppercase tracking-tighter hover:bg-primary hover:text-white hover:border-primary transition-all" onclick="window.print()">
-<span class="material-symbols-outlined text-sm">print</span> Print Page
+                    <div class="flex justify-center gap-4 no-print">
+                        <button
+                            class="flex items-center gap-2 px-4 py-2 rounded-lg bg-white dark:bg-white/5 border border-primary/10 text-xs font-bold uppercase tracking-tighter hover:bg-primary hover:text-white hover:border-primary transition-all"
+                            onclick="window.print()">
+                            <span class="material-symbols-outlined text-sm">print</span> Print Page
                         </button>
-</div>
-</footer>
-</div>
-</main>
-<div id="site-footer"></div>
-</div>
-<script src="components.js"></script>
-</body></html>
+                    </div>
+                </footer>
+            </div>
+        </main>
+        <div id="site-footer"></div>
+    </div>
+    <script src="components.js"></script>
+</body>
+
+</html>
