--- a/impressum.html
+++ b/impressum.html
@@ -90,8 +90,7 @@
                                 Name</span>
                         </div>
                         <div class="md:w-2/3">
-                            <p class="text-lg font-semibold text-[#181210] dark:text-white">Wallify IG Media Solutions
-                                GmbH</p>
+                            <p class="text-lg font-semibold text-[#181210] dark:text-white">34Devs Shopify Agency</p>
                         </div>
                     </div>
                     <!-- Item -->
@@ -102,9 +101,9 @@
                         </div>
                         <div class="md:w-2/3">
                             <p class="text-base leading-relaxed text-[#181210] dark:text-white">
-                                Tech Avenue 42, Floor 8<br />
-                                Silicon District<br />
-                                10117 Berlin, Germany
+                                Inhaber: Ahmet Hamdi Kılıç<br />
+                                Hedwigstraße 27<br />
+                                41352 Korschenbroich, Deutschland
                             </p>
                             <a class="inline-flex items-center gap-1 mt-2 text-xs font-medium text-primary hover:underline no-print"
                                 href="#">
@@ -122,12 +121,12 @@
                             <div class="flex items-center gap-2">
                                 <span class="material-symbols-outlined text-primary text-sm">mail</span>
                                 <a class="text-base font-medium hover:text-primary transition-colors underline decoration-primary/20 underline-offset-4"
-                                    href="mailto:legal@wallifyig.com">legal@wallifyig.com</a>
+                                    href="mailto:info@34devs.com">info@34devs.com</a>
                             </div>
                             <div class="flex items-center gap-2">
-                                <span class="material-symbols-outlined text-primary text-sm">call</span>
+                                <span class="material-symbols-outlined text-primary text-sm">language</span>
                                 <a class="text-base font-medium hover:text-primary transition-colors"
-                                    href="tel:+493012345678">+49 30 12345678</a>
+                                    href="https://www.34devs.com">www.34devs.com</a>
                             </div>
                         </div>
                     </div>
@@ -135,12 +134,12 @@
                     <div
                         class="group flex flex-col md:flex-row md:items-center py-6 border-b border-primary/10 transition-colors hover:bg-white/40 dark:hover:bg-white/5 px-2">
                         <div class="md:w-1/3 mb-1 md:mb-0">
-                            <span class="text-xs font-bold uppercase tracking-widest text-primary/60">Legal
-                                Registry</span>
+                            <span class="text-xs font-bold uppercase tracking-widest text-primary/60">Business
+                                Type</span>
                         </div>
                         <div class="md:w-2/3">
-                            <p class="text-base text-[#181210] dark:text-white">Amtsgericht Charlottenburg (Berlin), HRB
-                                123456 B</p>
+                            <p class="text-base text-[#181210] dark:text-white">Einzelunternehmen – Kleinunternehmer
+                                gemäß §19 UStG (von der Umsatzsteuer befreit)</p>
                         </div>
                     </div>
                     <!-- Item -->
@@ -162,8 +161,8 @@
                                 Director</span>
                         </div>
                         <div class="md:w-2/3">
-                            <p class="text-base font-semibold text-[#181210] dark:text-white">Jane Doe</p>
-                            <p class="text-xs text-gray-400">Authorized representative</p>
+                            <p class="text-base font-semibold text-[#181210] dark:text-white">Ahmet Hamdi Kılıç</p>
+                            <p class="text-xs text-gray-400">Inhaber / Owner</p>
                         </div>
                     </div>
                     <!-- Item -->
@@ -174,31 +173,13 @@
                                 Responsible</span>
                         </div>
                         <div class="md:w-2/3">
-                            <p class="text-base text-[#181210] dark:text-white">Marcus Vane</p>
-                            <p class="text-xs text-gray-400 mt-1">Responsible for content according to § 18 MStV</p>
+                            <p class="text-base text-[#181210] dark:text-white">Ahmet Hamdi Kılıç</p>
+                            <p class="text-xs text-gray-400 mt-1">Responsible for content according to § 55 Abs. 2 RStV
+                                / § 18 MStV</p>
                         </div>
                     </div>
                 </section>
-                <!-- Footer Disclaimer -->
-                <footer class="mt-16 pt-8 border-t border-primary/5 text-center">
-                    <p class="text-xs text-gray-400 dark:text-gray-500 uppercase tracking-widest mb-6">Online Dispute
-                        Resolution</p>
-                    <p class="text-sm text-gray-500 dark:text-gray-400 leading-relaxed mb-8">
-                        The European Commission provides a platform for online dispute resolution (OS), which you can
-                        find here:
-                        <a class="text-primary hover:underline" href="https://ec.europa.eu/consumers/odr"
-                            target="_blank">https://ec.europa.eu/consumers/odr</a>.
-                        We are not obligated and unwilling to participate in a dispute resolution procedure before a
-                        consumer arbitration board.
-                    </p>
-                    <div class="flex justify-center gap-4 no-print">
-                        <button
-                            class="flex items-center gap-2 px-4 py-2 rounded-lg bg-white dark:bg-white/5 border border-primary/10 text-xs font-bold uppercase tracking-tighter hover:bg-primary hover:text-white hover:border-primary transition-all"
-                            onclick="window.print()">
-                            <span class="material-symbols-outlined text-sm">print</span> Print Page
-                        </button>
-                    </div>
-                </footer>
+                <!-- Footer Removed -->
             </div>
         </main>
         <div id="site-footer"></div>
