--- a/support.html
+++ b/support.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Wallify IG | Support</title>
+    <link rel="icon" type="image/png" href="assets/1200x1200.png" />
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&amp;display=swap"
         rel="stylesheet" />
@@ -159,7 +160,9 @@
                             <textarea class="w-full p-4 bg-[#f9fafb] border border-[#e1e3e5] rounded-xl text-[#1a1c1d]"
                                 rows="4"></textarea>
                         </div>
-                        <a href="mailto:info@34devs.com" class="block text-center w-full py-7 bg-primary text-white font-black rounded-2xl shadow-xl shadow-primary/20 hover:scale-[1.02] transition-all">Send Email</a>
+                        <a href="mailto:info@34devs.com"
+                            class="block text-center w-full py-7 bg-primary text-white font-black rounded-2xl shadow-xl shadow-primary/20 hover:scale-[1.02] transition-all">Send
+                            Email</a>
                     </form>
                 </div>
             </div>
