--- a/docs.html
+++ b/docs.html
@@ -112,8 +112,8 @@
                 </div>
 
                 <!-- Dashboard Overview Image -->
-                <div class="rounded-3xl overflow-hidden border border-[#e1e3e5] shadow-2xl">
-                    <img src="assets/dashboard.png" alt="Wallify IG Dashboard" class="w-full h-auto">
+                <div class="rounded-3xl overflow-hidden shadow-2xl">
+                    <img src="assets/dashboard.png" alt="Wallify IG Dashboard" class="w-full h-auto block">
                 </div>
 
                 <div class="space-y-6 text-[#5c5f62] leading-relaxed">
@@ -144,11 +144,9 @@
                                 interact with your theme.</p>
                         </div>
                     </div>
-                    <!-- Placeholder for Installation Image -->
-                    <div
-                        class="bg-[#f9fafb] border-2 border-dashed border-[#e1e3e5] rounded-3xl flex flex-col items-center justify-center min-h-[200px]">
-                        <span class="material-symbols-outlined text-4xl text-[#919eab] mb-2">image</span>
-                        <p class="text-[10px] font-bold text-[#919eab] uppercase">Install Screen Image Here</p>
+                    <!-- Installation Image -->
+                    <div class="rounded-3xl overflow-hidden shadow-sm">
+                        <img src="assets/app-download.png" alt="Wallify IG Installation" class="w-full h-auto block">
                     </div>
                 </div>
             </section>
@@ -160,11 +158,9 @@
                     <p class="text-lg text-[#5c5f62]">Sync your feed securely using the official Meta API.</p>
                 </div>
 
-                <!-- Placeholder for Connection Process Image -->
-                <div
-                    class="aspect-video bg-[#f9fafb] border-2 border-dashed border-[#e1e3e5] rounded-3xl flex flex-col items-center justify-center">
-                    <span class="material-symbols-outlined text-4xl text-[#919eab] mb-2">image</span>
-                    <p class="text-xs font-bold text-[#919eab] uppercase">Instagram OAuth Screen Here</p>
+                <!-- Instagram Connection Image -->
+                <div class="rounded-3xl overflow-hidden shadow-2xl">
+                    <img src="assets/insta-login.png" alt="Instagram Login" class="w-full h-auto block">
                 </div>
 
                 <div class="space-y-6">
@@ -196,23 +192,64 @@
                 </div>
 
                 <div class="grid md:grid-cols-3 gap-6">
-                    <!-- Placeholder for Layout Preview -->
-                    <div
-                        class="bg-[#f9fafb] border-2 border-dashed border-[#e1e3e5] rounded-3xl aspect-square flex flex-col items-center justify-center p-4 text-center">
-                        <span class="material-symbols-outlined text-3xl text-[#919eab] mb-2">grid_view</span>
-                        <p class="text-[8px] font-black text-[#919eab] uppercase">Grid Layout Image</p>
+                    <!-- Grid Layout Preview -->
+                    <div class="bg-white p-6 rounded-3xl shadow-sm border border-[#f0f0f0]">
+                        <div class="flex items-center justify-between mb-4">
+                            <span class="text-[10px] font-black uppercase tracking-wider">Grid</span>
+                            <span class="material-symbols-outlined text-[#5c5f62] text-sm">grid_view</span>
+                        </div>
+                        <div class="grid grid-cols-3 gap-2">
+                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
+                                <img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d?w=200&h=200&fit=crop"
+                                    class="w-full h-full object-cover block">
+                            </div>
+                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
+                                <img src="https://images.unsplash.com/photo-1542291026-7eec264c27ff?w=200&h=200&fit=crop"
+                                    class="w-full h-full object-cover block">
+                            </div>
+                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
+                                <img src="https://images.unsplash.com/photo-1560769629-975ec94e6a86?w=200&h=200&fit=crop"
+                                    class="w-full h-full object-cover block">
+                            </div>
+                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
+                                <img src="https://images.unsplash.com/photo-1525966222134-fcfa99b8ae77?w=200&h=200&fit=crop"
+                                    class="w-full h-full object-cover block">
+                            </div>
+                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
+                                <img src="https://images.unsplash.com/photo-1549298916-b41d501d3772?w=200&h=200&fit=crop"
+                                    class="w-full h-full object-cover block">
+                            </div>
+                            <div class="aspect-square bg-[#f4f6f8] rounded-md overflow-hidden">
+                                <img src="https://images.unsplash.com/photo-1511556532299-8f662fc26c06?w=200&h=200&fit=crop"
+                                    class="w-full h-full object-cover block">
+                            </div>
+                        </div>
                     </div>
-                    <!-- Placeholder for Slider Preview -->
-                    <div
-                        class="bg-[#f9fafb] border-2 border-dashed border-[#e1e3e5] rounded-3xl aspect-square flex flex-col items-center justify-center p-4 text-center">
-                        <span class="material-symbols-outlined text-3xl text-[#919eab] mb-2">view_carousel</span>
-                        <p class="text-[8px] font-black text-[#919eab] uppercase">Slider Layout Image</p>
+
+                    <!-- Slider Layout Preview -->
+                    <div class="bg-white p-6 rounded-3xl shadow-sm border border-[#f0f0f0]">
+                        <div class="flex items-center justify-between mb-4">
+                            <span class="text-[10px] font-black uppercase tracking-wider">Slider</span>
+                            <div class="flex gap-1 text-[#ff5a3d]">
+                                <span class="material-symbols-outlined text-sm">chevron_left</span>
+                                <span class="material-symbols-outlined text-sm">chevron_right</span>
+                            </div>
+                        </div>
+                        <div class="flex gap-3">
+                            <div class="w-1/2 aspect-square bg-[#f4f6f8] rounded-lg overflow-hidden shrink-0">
+                                <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?w=400&h=400&fit=crop"
+                                    class="w-full h-full object-cover block">
+                            </div>
+                            <div class="w-1/2 aspect-square bg-[#f4f6f8] rounded-lg overflow-hidden shrink-0">
+                                <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400&h=400&fit=crop"
+                                    class="w-full h-full object-cover block">
+                            </div>
+                        </div>
                     </div>
-                    <!-- Placeholder for Settings Preview -->
-                    <div
-                        class="bg-[#f9fafb] border-2 border-dashed border-[#e1e3e5] rounded-3xl aspect-square flex flex-col items-center justify-center p-4 text-center">
-                        <span class="material-symbols-outlined text-3xl text-[#919eab] mb-2">palette</span>
-                        <p class="text-[8px] font-black text-[#919eab] uppercase">Style Editor Image</p>
+
+                    <!-- Style Editor Image -->
+                    <div class="flex items-center justify-center">
+                        <img src="assets/style-image.png" alt="Style Editor" class="w-full h-auto object-contain block">
                     </div>
                 </div>
 
